header image, heigth en textalign veranderd, #fixMenubtn width veranderd

--- a/css/design.css
+++ b/css/design.css
@@ -11,9 +11,11 @@ body{
 }
 
 header{
-  background-image: url("./images/header space.png");
+  background-image: url("./images/header avengers.png");
+  background-size: contain;
   width: 100%;
-  height: 350px;
+  height: 150px;
+  text-align: center;
 }
 
 section{
@@ -68,7 +70,7 @@ section{
 #fixMenubtn{
   position: absolute;
   height: 5%;
-  width: 5%;
+  width: 10%;
 }
 
 a{
